datafusion-cli/tests/snapshots/cli@load_local_csv.sql.snap
---
source: datafusion-cli/tests/cli_integration.rs
info:
  program: datafusion-cli
  args: []
  env:
    AWS_ACCESS_KEY_ID: TEST-DataFusionLogin
    AWS_ALLOW_HTTP: "true"
    AWS_ENDPOINT: "http://localhost:32769"
    AWS_SECRET_ACCESS_KEY: TEST-DataFusionPassword
  stdin: "CREATE EXTERNAL TABLE CARS\nSTORED AS CSV\nLOCATION '../datafusion/core/tests/data/cars.csv'\nOPTIONS ('has_header' 'TRUE');\n\nSELECT * FROM CARS limit 1;"
input_file: datafusion-cli/tests/sql/integration/load_local_csv.sql
---
success: true
exit_code: 0
----- stdout -----
[CLI_VERSION]
0 row(s) fetched. 
[ELAPSED]

Peak memory usage: 0.0 B
Cumulative allocations: 0.0 B
Memory usage by operator:
Other: 0.0 B

+-----+-------+---------------------+
| car | speed | time                |
+-----+-------+---------------------+
| red | 20.0  | 1996-04-12T12:05:03 |
+-----+-------+---------------------+
1 row(s) fetched. 
[ELAPSED]

Peak memory usage: 1664.0 B
Cumulative allocations: 1664.0 B
Memory usage by operator:
Other: 1664.0 B

\q

----- stderr -----
