datafusion-cli/tests/snapshots/cli_format@json.snap
---
source: datafusion-cli/tests/cli_integration.rs
info:
  program: datafusion-cli
  args:
    - "--command"
    - select 1
    - "-q"
    - "--format"
    - json
---
success: true
exit_code: 0
----- stdout -----
[{"Int64(1)":1}]
Peak memory usage: 8.0 B
Cumulative allocations: 8.0 B
Memory usage by operator:
Other: 8.0 B


----- stderr -----
